--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -28,12 +28,13 @@
 .whatsapp {
     position: fixed;
     bottom: 0;
-    right: 100px;
+    right: 2rem;
 }
 
 .whatsapp img {
     width: $ancho-wsp;
     height: $alto-wsp;
+   
 }
 
 
@@ -125,6 +126,9 @@
         height: calc($alto-wsp - 30px);
     }
 
+    .whatsapp{
+        right: 0.1rem;
+    }
 
 
     /*Nosotros*/
@@ -221,8 +225,8 @@
        }
     
         .header__logo{
-           width: 50px;
-           height: 50px;
+           width: 65px;
+           height: 65px;
         }
            
          .imagen__carrusel{
@@ -238,15 +242,15 @@
            } 
            
         .card__imagen{
-           width: 12rem;
-           height: 12rem;
+           width: 16rem;
+           height: 15rem;
            max-width: 100%;
             margin: auto;     
         }    
     
         .card__productos{
-           width: 13rem;
-          height: 17rem;
+           width: 18rem;
+          height: 21rem;
           margin: auto auto;
            margin-top: 3rem;
            max-width: 100%;
@@ -254,12 +258,13 @@
     
         .card__enlace{
                margin-top: 10px;
-               padding-left: 7px;
-              font-weight: 500;
-              font-size: 10px;
+               margin-left: 5rem;
+              font-weight: bolder;
+              font-size: 25px;
              padding: 5px 5px;
-       }   
-           
+       }  
+       
+
        
        .lista-navegacion a{
           font-weight: 100px;
@@ -311,8 +316,12 @@
     
       .card__productos2{
        width: 13rem;
-       height: 20rem;
+       height: 21rem;
        padding-right: 15px;
+      }
+
+      .card__productos2 p{
+        font-size: 27px;
       }
        } 
 
