--- a/scss/_inicio.scss
+++ b/scss/_inicio.scss
@@ -25,7 +25,8 @@ h1{
     align-items: center;
     width:100%;
     background-color: #3a3a3a;
-    padding-bottom: 10px;
+    
+    padding-bottom: 15px;
 }
 
 .header__logo{
@@ -43,6 +44,8 @@ h1{
 
 #navbarScroll a{
   color: grey;
+  font-size: 20px;
+  font-family:  "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
 }
 
 .dropdown-menu{
