--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -15,7 +15,7 @@
 
 
 
-@media (max-width: 767px) {
+@media screen and (min-width:320px) and (max-width: 767px){
 
     /*Seccion inicio*/
 
@@ -128,9 +128,6 @@
         width: 80%;
     }
 
-    .mb-3 input{
-        width: 16rem;
-    }
 
     /*Preguntas*/
 
@@ -245,7 +242,7 @@
 
 
 
-    @media (min-width:768px){
+    @media screen and (min-width:768px) and (max-width: 1024px){
      
         /*Inicio*/   
        h1{
